--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "author": "Lindsay Wardell",
   "license": "MIT",
   "devDependencies": {
+    "@types/inquirer": "^6.5.0",
+    "@types/uuid": "^3.4.5",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "typescript": "^3.6.2"
   },
   "dependencies": {
+    "@types/table": "^4.0.6",
     "class-transformer": "^0.2.3",
+    "inquirer": "^7.0.0",
     "redux": "^4.0.4",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "table": "^5.4.6",
+    "uuid": "^3.3.3"
   }
 }
