--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "build": "tsc"
   },
   "author": "Lindsay Wardell",
   "license": "MIT",
@@ -14,13 +15,12 @@
     "@types/uuid": "^3.4.5",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
-    "typescript": "^3.6.2"
+    "typescript": "^3.6.2",
+    "@types/table": "^4.0.6"
   },
   "dependencies": {
-    "@types/table": "^4.0.6",
     "class-transformer": "^0.2.3",
     "inquirer": "^7.0.0",
-    "redux": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "table": "^5.4.6",
     "uuid": "^3.3.3"
