--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typescript": "^3.6.2"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "class-transformer": "^0.2.3",
     "inquirer": "^7.0.0",
+    "natural-order": "^0.2.3",
     "randomcolor": "^0.5.4",
     "reflect-metadata": "^0.1.13",
     "table": "^5.4.6",
